added language syntax to thesis

--- a/thesis/countermachine.tex
+++ b/thesis/countermachine.tex
@@ -5,6 +5,7 @@
 \usepackage[english]{babel}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{color}
 \usepackage{thmtools}
 \usepackage{fancyvrb}
 \usepackage{mathtools}
@@ -15,7 +16,9 @@
 \usepackage{calc}
 \usepackage{float}
 \usepackage{listings}
+\usepackage{src/counterlang}
 \usepackage{stmaryrd}
+\usepackage[nounderscore]{syntax}
 \usepackage[pdftex,
   pdfauthor={Michael Banken},
   pdftitle={Simulation of counter machines},
